src/components/pages/home/Home.css
.home-page{
    width: 100%;
}
.intro-text:hover {
    transform: scale(1.05);
}
.intro-text h1{
    position: relative;
    padding-top: 1%;
    left: 3%;
    width: 100%;
    font-size: 64px;
    color: #494949;
}

.intro-text h2 {
    font-weight: 200;
    font-size: 32px;
    position: relative;
    left: 3%;
}
.profile-container{
    width: 80%;
    height: 40vh;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    margin: 4% 0;
}
.profile-container:hover {
    transform: scale(1.05) !important;
}

.h3-intro  {
    height: 50%;
    margin-top: 20px;
    width: 110%;
}
.col-1:hover{
    transform: scale(1.05);
}
.col:hover{
    transform: scale(1.05);
}

.frosted-container {
    background-color: rgba(255, 255, 255, 0.099);
    transform: scale(1);
    border-radius: 25px;
    -webkit-backdrop-filter: saturate(100% )blur(5px);
    backdrop-filter: saturate(100% )blur(5px);
    border: solid 1px #494949;
}

.profile-container img{
    width: 100%;
    max-width: 250px;
    border-radius: 100px;
    filter: saturate(90%);
    filter: brightness(130%) contrast(90%) saturate(85%);
    margin-left: 15%;
    height: 300px;
}
h3{
    font-size: 2rem;
    text-align: center;
}
.col {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center; 
    width: 60%;
}
.languages{
    width: 100%;
    height: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.language-card {
    position: relative;
    display: inline-block;
    margin: 10px;
    text-align: center;
  }
  .language-card .tooltip {
    visibility: hidden;
    width: 200px;
    background-color: #333;
    color: #fff;
    text-align: center;
    border-radius: 5px;
    padding: 8px;
    position: absolute;
    z-index: 1;
    top: 110%; /* Position it above the language card */
    left: 50%;
    margin-left: -100px; /* Center the tooltip */
    opacity: 0;
    transition: opacity 0.3s, visibility 0.3s;
    font-size: 14px;
  }
  .language-card:hover .tooltip {
    visibility: visible;
    opacity: 1;
  }
  .language-card .icon {
    font-size: 50px;
    margin-bottom: 10px;
    cursor: pointer;
    transition: transform 0.3s;
  }
  .language-card .tooltip::after {
    content: '';
    position: absolute;
    bottom: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #333 transparent transparent transparent;
  }
.language-section .language-card{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.language-section{
   padding: 5%;
   text-align: center;
}
.lang-card{
    width: 90%;
    height: 200px;
    margin: 0 3%;
}
.core-languages{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 3%;
}
.other-languages{
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}
.languages .icon{
    margin: 0 30px;
    color: #494949;
}
.icon:hover {
    background-color: #494949;
    color: white; /* This should affect the <a>, but not the SVG yet */
  }
.title {
    margin: 2%;
    padding-top: 0;
}
h2 {
    margin: 0%;
}
.language-details{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-bottom: 30px;
}
.language-list{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}
.main{
    width: 50%;
    height: 30vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0;
    text-align: center;
}
.other{
    width: 50%;
    height: 30vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-left: 2%;
}
.skills{
    width: 80%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: 2%;
}
.link-to-projects{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 3%;
    padding: 2%;
    width: 50%;
    height: 4%;
}
.explore-btn{
    width: 75%;
    display: inline-block;
  padding: 20px 40px;
  margin: 30px;
  font-size: 16px;
  font-weight: bold;
  text-align: center;
  text-decoration: none;
  border: solid 1px white;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s, color 0.3s;
  background-color: white; /* Default background color */
  color: #494949; /* Default text color */
}
.small-btn{
    width: 200px;
    height: 60px;
    display: inline-block;
  padding: 20px 40px;
  margin: 30px;
  font-size: 16px;
  font-weight: bold;
  text-align: center;
  text-decoration: none;
  border: solid 1px white;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s, color 0.3s;
  background-color: white; /* Default background color */
  color: #494949; /* Default text color */
}
.btn:hover {
    background-color: #494949; /* Hover background color */
    color: #fff; 
    transform: scale(1.1);
}
.explore-btn:active {
    background-color: #6faad0; /* Active background color */
  } 

.button-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
}

@media screen and (min-width: 1500px) {
    .profile-container img {
        height: 400px;
        max-width: none !important;
    }
}
@media screen and (min-width: 1100px) {
    .skills {
        min-width: 1100px !important;
    }
}
@media screen and (max-width:1100px) {
    .intro-text h1{
        font-size: 55px;
        width: 80%;
    }
    .intro-text h2{
        margin: 5px 0 0 0;
        font-size: 33px;
        line-height: 40px;
    }
    .profile-container{
        flex-direction: column;
        justify-content: center;
        align-items: center;
        font-size: 12px;
        text-align: center;   
        margin: 4% 0;
        height: auto;
        width: 80%;
    }
    .profile-container img{
        height: 200px;
        width: 150px;
        margin-left: 0;
    }
    .skills{
        flex-direction: column;
        margin: 0;
    }
    .lang-card{
        margin: 7vh 0 0 0;
    }
    .lang-card .icon {
        font-size: 18px;
    }
    .small-btn{
        width: 150px;
        height: 60px;
        font-size: 15px;
        margin-top: 2vh;
    }
    .explore-btn{
        margin-top: 10vh;
    }
}
@media screen and (max-width:450px) {
    .intro-text h1{
        font-size: 40px;
        text-align: left;
    }
    .intro-text h2{
        margin: 5px 10% 0 0;
        font-size: 20px;
        line-height: 20px;
    }
    h3{
        font-size: 15px;
    }
    .small-btn{
        width: 100px;
        min-width: 90px;
        height: 40px;
        font-size: 12px;
        padding: 10px 10px 10px 10px;
    }
    .col .button-container {
        width: 80%;
    }
    .skills.two {
        margin-top: 0vh !important;
    }

    .language-card{
        font-size: 12px;
    }
    .languages .icon{
        margin: 0 10px;
    }
    .lang-card{
        width: 100%;
        height: 120px;
        margin-top: 10% !important;
    }
    .projects-container{
        width: 90%;
        margin: 5% 5% 0 5% !important;
    }
    .home .individual-project {
        height: 300px !important;
    }
    .project-text{
        margin-top: 5% !important;
    }
    .left img{
        margin-top: -1vh;
        width: 105%;
        margin-left: 7%;
    }
    .reverse img{
        margin-top: -1vh;
        width: 105%;
        margin-right: 15%;
        margin-left: -3%;
    }
    .explore-btn{
        margin-top: 5vh;
    }
}
/* @media screen and (max-width: 900px) and (orientation: landscape) {
    .profile-container{
        flex-direction: row;
        justify-content: center;
        align-items: center;
        font-size: 12px;
        text-align: center;   
        margin-top: 50px; 
        margin-bottom: 10vh;
        height: 150px;
        width: 90%;
    }
    .intro-text h1{
        font-size: 30px;
        text-align: left;
    }
    .intro-text h2{
        margin: 5px 10% 0 10px;
        font-size: 20px;
        line-height: 20px;
    }
    h3{
        font-size: 15px;
    }
    .small-btn{
        width: 100px;
        height: 40px;
        font-size: 12px;
        min-width: 90px;
        padding: 10px 10px 10px 10px;
    }
    .col .button-container {
        width: 80%;
    }
    .languages{
        margin-top: -5vh;
    }

    .language-card{
        font-size: 12px;
    }
    .languages .icon{
        margin: 0 10px;
    }
    .lang-card{
        width: 100%;
        height: 120px;
        margin-top: 0% !important;
        margin-bottom: 20vh !important;
    }
    .projects-container{
        width: 90%;
        margin: 5% 5% 0 5% !important;
    }
    .home .individual-project {
        height: 300px !important;
    }
    .project-text{
        margin-top: 5% !important;
    }
    .left img{
        margin-top: -1vh !important;
        width: 105% !important;
        margin-left: 7% !important;
    }
    .reverse img{
        margin-top: -1vh !important;
        width: 105% !important;
        margin-right: 15% !important;
        /* margin-left: -3% !important; */
    /* } */
    /* .explore-btn{
        margin-top: 5vh;
    }
    .skills{
        margin-top: 0vh;
    }
} */ 

